<resources>
    <string name="app_name" translatable="false">Minotaurus Control V4</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="dialog_color_picker">Pick Color</string>
    <string name="press_color_to_apply">Press to apply</string>
    <string name="root_progress_dialog_title">Acquiring Root Access</string>
    <string name="root_progress_dialog_message">Please wait…</string>
    <string name="no_su_dialog_title">No root privileges</string>
    <string name="no_su_dialog_message">We could not acquire root access on your device.\n\nMost of this app\'s functions can be performed without root access. However, you might experience problems with running scripts or rebooting.\n\nWe strongly recommend to allow root access on next request or allow such access in your Su client manually.</string>
    <string name="no_su_dialog_dismiss_button_text">Whatever, man</string>
    <string name="command_executed_success_toast">Executed successfully</string>
    <string name="root_tools_exception_toast">File not found or root denied</string>
    <string name="reboot_menu">Reboot menu</string>
    <string name="reboot_device_text">Reboot Device</string>
    <string name="reboot_recovery_text">Reboot Recovery</string>
    <string name="reboot_ui_text">Reboot SystemUI</string>
    <string name="app_reboot_required_dialog_title">App reboot required</string>
    <string name="app_reboot_required_dialog_message">For this action to take effect it is required to restart %1$s.\n\nPress OK to restart now</string>
    <string name="theme_dialog_title">Choose theme</string>
    <string name="changelog_version_title">ROM version: %1$s</string>
    <string name="backup_restore_dialog_title">Backup/Restore Rom Control system data</string>
    <string name="choose_backup_dialog_title">Please choose backup to restore</string>
    <string name="no_backup_dialog_title">No backup found on this device</string>
    <string name="no_backup_dialog_message">Would you like to create new backup now?</string>
    <string name="restore_confirm_dialog_title">Please confirm restore</string>
    <string name="restore_confirm_message">You have chosen to restore data from previous Rom Control preferences.\n\n<b>Please note! This operation will change your device settings based on the settings stored in this file.\n\n<font fgcolor="red">DO NOT PROCEED unless absolutely sure!!!</font></b>\n\nRom Control will close to allow data restoration and reopen again upon its completion. Depending on the amount of your settings this may take some time.\n\nPlease click \"CONFIRM\" to proceed or \"Cancel\" to quit.</string>
    <string name="backup_complete_toast">Backup completed successfully. The backup file can be found at\n%1$s</string>
    <string name="backup_file_prefix_date_format" translatable="false">dd-MM-yy_HH:mm</string>
    <string name="backup_file_suffix" translatable="false">_RCBackup</string>
    <string name="restore_complete_toast">Restore complete</string>
    <string name="systemui_prefs">SystemUI prefs</string>
    <string name="phone_prefs">Phone prefs</string>
    <string name="framework_prefs">Framework prefs</string>
    <string name="notification_panel_prefs">Notification panel prefs</string>
    <string name="more_options">More options</string>
    <string name="set_theme">Set theme</string>
    <string name="backup_and_restore"><![CDATA[Backup & Restore]]></string>
    <string name="changelog">Changelog</string>
    <string name="about_us">About us</string>
    <string name="confirm_script_dialog_message">"Are you sure you want to run %1$s?"</string>
    <string name="run_script_confirm_dialog_title">Confirmation required</string>
    <string name="run_script_confirm_dialog_positive_button">Yes, run</string>
    <string name="find_app">Find App</string>
    <string name="reboot_required_dialog_title">Device reboot required</string>
    <string name="reboot_required_dialog_message">For this action to take effect, full device reboot is required. Would you like to reboot now?</string>
    <string name="reboot_later_negative_button">later</string>
    <string name="reboot_now_dialog_button">reboot now</string>
    <string name="imminent_reboot_warning">Your device will reboot IMMEDIATELY upon script completion!!!</string>
    <string name="restore_dialog_description">This action will restore the following items to stock colors</string>
    <string name="statusbar">Statusbar</string>
    <string name="statusbar_icon_color">Statusbar icon color</string>
    <string name="Separate_or_Global_colors">Separate or Global color</string>
    <string name="Global_color">Global color</string>
    <string name="Separate_color">Separate color</string>
    <string name="ClockColor">Clock Color</string>
    <string name="StatusIconsColor">Statusbar icons color</string>
    <string name="WifiSignalColor">Wifi Signal Color</string>
    <string name="MobileSignalColor">Mobile Signal Color</string>
    <string name="MobileTypeandArrowsColor">Mobile Type and Arrows Color</string>
    <string name="RoamingIconColor">Roaming Icon Color</string>
    <string name="AirplanemodeColor">Airplanemode Color</string>
    <string name="NotificationIconsColor">Notification Icons Color</string>
    <string name="StatusbarClockOptions">Statusbar Clock Options</string>
    <string name="Taponclock">Tap on clock</string>
    <string name="TapClockAppSelection">Tap Clock App Selection</string>
    <string name="ShowClockandDate">Show Clock and Date</string>
    <string name="UppercaseTextClock">Uppercase Text Clock</string>
    <string name="ClockFormat">Clock Format</string>
    <string name="ClockLocation">Clock Location</string>
    <string name="ClockAMPM">Clock AM/PM</string>
    <string name="ClockFontStyle">Clock Font Style</string>
    <string name="ClockScaling">Clock Scaling</string>
    <string name="DateDisplayType">Date Display Type</string>
    <string name="DateStyle">Date Style</string>
    <string name="DateFormat">Date Format</string>
    <string name="BatteryPercentColor">Battery Percent Color</string>
    <string name="Networktrafficpreferences">Network traffic preferences</string>
    <string name="Displayedtrafficinfoleft">Displayed traffic info left</string>
    <string name="DisplaydatainBytes">Display data in Bytes</string>
    <string name="Showtrafficarrows">Show traffic arrows</string>
    <string name="Arrowsposition">Arrows position</string>
    <string name="Autohideonlowtraffic">Autohide on low traffic</string>
    <string name="Autohidethreshold">Autohide threshold</string>
    <string name="Fontstyle">Font style</string>
    <string name="Textsizescalefactor">Text size scale factor</string>
    <string name="Separatecolorsforelements">Separate colors for elements</string>
    <string name="Globalcolor">Global color</string>
    <string name="Uploadtextcolor">Upload text color</string>
    <string name="Downloadtextcolor">Download text color</string>
    <string name="Trafficarrowscolor">Traffic arrows color</string>
    <string name="VirtualButtons">Virtual Buttons (set one button on position)</string>
    <string name="LockButton">Lock Button</string>
    <string name="Rightside">Right side</string>
    <string name="Leftside">Left side</string>
    <string name="Center">Center</string>
    <string name="HomeButton">Home Button</string>
    <string name="RecentButton">Recent Button</string>
    <string name="ExpandedStatusbar">Expanded Statusbar</string>
    <string name="Backgroundcolors">Background colors</string>
    <string name="Expandedviewbackgroundcolor">Expanded view background color</string>
    <string name="Header">Header</string>
    <string name="Searchbar">Search bar</string>
    <string name="Quicktoggles">Quick toggles</string>
    <string name="Quicksettingsandbrightness">Quick settings and brightness</string>
    <string name="DataUsage">Data Usage</string>
    <string name="QSDetail">QS Detail</string>
    <string name="QSCustomize">QS Customize</string>
    <string name="MatrixAnimationsFeatures">Matrix Animations Features</string>
    <string name="MatrixRecentsAnimation">Matrix Recents Animation</string>
    <string name="MatrixTextColorized">Matrix Text Colorized</string>
    <string name="MatrixBGColor">Matrix BG Color</string>
    <string name="MatrixTextTransparency">Matrix Text Transparency</string>
    <string name="MatrixTextFontSize">Matrix Text Font Size</string>
    <string name="MatrixFrequency">Matrix Frequency</string>
    <string name="USB">USB</string>
    <string name="USBpluginoutwakeup">USB plug in/out wakeup</string>
    <string name="Seperatecolors">Separate colors</string>
    <string name="Globalcolors">Global colors</string>
    <string name="Taptolaunchapp">Tap to launch app</string>
    <string name="TapClockLauncherisdisabled">Tap Clock Launcher is disabled</string>
    <string name="Clockshown">Clock shown</string>
    <string name="Clockhidden">Clock hidden</string>
    <string name="Uppercaseenabled">Uppercase enabled</string>
    <string name="Disabled">Disabled</string>
    <string name="Adjustclocksize">Adjust clock size</string>
    <string name="DisplayedinBits">Displayed in Bits (default)</string>
    <string name="DisplayedinBytes">Displayed in Bytes</string>
    <string name="Arrowshidden">Arrows hidden</string>
    <string name="Arrowsshown">Arrows shown</string>
    <string name="Displayedalways">Displayed always</string>
    <string name="Autohideenabled">Autohide enabled</string>
    <string name="Allelementscanbecoloredseparately">All elements can be colored separately</string>
    <string name="Globalcolorwillapplytoallelements">Global color will apply to all elements</string>
    <string name="On">On</string>
    <string name="Off">Off</string>
    <string name="enabled">enabled</string>
    <string name="disabled">disabled</string>
    <string name="Hidden">Hidden</string>
    <string name="Shown">Shown</string>
    <string name="MatrixOptions">Matrix Options</string>
    <string name="ChooseMatrixTextcolor">Choose Matrix Text color</string>
    <string name="ChooseMatrixBGcolor">Choose Matrix BG color</string>
    <string name="MinitBatteryMod">3Minit Battery Mod</string>
    <string name="Stockbattery">Stock battery</string>
    <string name="DisplayPercentage">Display Percentage</string>
    <string name="BatterySettings">Battery Settings</string>
    <string name="BatterySymbol">Battery Symbol</string>
    <string name="BatteryBar">Battery Bar</string>
    <string name="DisplayLineontopforbattery">Display Line on top for battery</string>
    <string name="Batterybaranimation">Battery bar animation</string>
    <string name="Batterybarstyle">Battery bar style</string>
    <string name="Thicknessofbatterybar">Thickness of battery bar</string>
    <string name="BatteryBarColor">Battery Bar Color</string>
    <string name="Choosecolorofbatterybar">Choose color of battery bar</string>
    <string name="Hardkeysbacklightduration">Hardkeys backlight duration</string>
    <string name="Settimeofduration">Set time of duration</string>
    <string name="Headsups">Headsups</string>
    <string name="HeadsUpNotifications">Heads Up Notifications</string>
    <string name="QuicklaunchinRecents">Quicklaunch in Recents</string>
    <string name="SamsungStockTrafficRealTime">Samsung Stock Traffic Real Time</string>
    <string name="CustomNetworktraffic">Custom Networktraffic</string>
    <string name="SignalPosition">Signal Position</string>
    <string name="SignalIconChooser">Signal Icon Chooser</string>
    <string name="SignalIconChooserSim2">Signal Icon Chooser Sim 2</string>
    <string name="AlarmIconChooser">Alarm Icon Chooser</string>
    <string name="WifiarrowChooser">Wifi arrow Chooser</string>
    <string name="Wifiiconchooser">Wifi icon chooser</string>
</resources>