<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.wubydax.romcontrol.v2.prefs.ImageHeaderPreference app:imageSource="@drawable/android"/>
    <com.wubydax.romcontrol.v2.prefs.ThumbnailListPreference
        android:defaultValue="1"
        android:key="asc_signal"
        android:title="@string/SignalIconChooser"
        app:drawableArray="@array/signal_drawables"
        app:entryList="@array/signal_entries"
        app:entryValuesList="@array/signal_values"
        app:isSilent="false"
        app:packageNameToKill="com.android.systemui"/>
    <com.wubydax.romcontrol.v2.prefs.ThumbnailListPreference
        android:defaultValue="1"
        android:key="asc_signal_sim2"
        android:title="@string/SignalIconChooserSim2"
        app:drawableArray="@array/signal_drawables"
        app:entryList="@array/signal_entries"
        app:entryValuesList="@array/signal_values"
        app:isSilent="false"
        app:packageNameToKill="com.android.systemui"/>
    <com.wubydax.romcontrol.v2.prefs.ThumbnailListPreference
        android:defaultValue="1"
        android:key="asc_alarm"
        android:title="@string/AlarmIconChooser"
        app:drawableArray="@array/alarm_drawables"
        app:entryList="@array/alarm_entries"
        app:entryValuesList="@array/alarm_values"
        app:isSilent="false"
        app:packageNameToKill="com.android.systemui"/>
    <com.wubydax.romcontrol.v2.prefs.ThumbnailListPreference
        android:defaultValue="1"
        android:key="asc_wifi"
        android:title="@string/Wifiiconchooser"
        app:drawableArray="@array/wifi_drawables"
        app:entryList="@array/wifi_entries"
        app:entryValuesList="@array/wifi_values"
        app:isSilent="false"
        app:packageNameToKill="com.android.systemui"/>
    <com.wubydax.romcontrol.v2.prefs.ThumbnailListPreference
        android:defaultValue="1"
        android:key="asc_arrow_wifi"
        android:title="@string/WifiarrowChooser"
        app:drawableArray="@array/wifiarrow_drawables"
        app:entryList="@array/wifiarrow_entries"
        app:entryValuesList="@array/wifiarrow_values"
        app:isSilent="false"
        app:packageNameToKill="com.android.systemui"/>
    <PreferenceScreen android:title="@string/BatterySettings">
        <PreferenceCategory android:title="@string/BatterySymbol" >
            <com.wubydax.romcontrol.v2.prefs.OpenAppPreference android:title="@string/MinitBatteryMod" app:componentName="com.three.minit.minitbatterysettings.free/com.three.minit.minitbatterysettings.MainActivity"/>
            <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="@string/MinitBatteryMod" android:key="minit_battery_visible" android:defaultValue="true" android:summaryOn="@string/Shown" android:summaryOff="@string/Hidden" app:packageNameToKill="com.android.systemui" app:isSilent="false"/>
            <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="@string/Stockbattery" android:key="asc_stock_battery_visibility" android:defaultValue="false" android:summaryOn="@string/Shown" android:summaryOff="@string/Hidden" app:packageNameToKill="com.android.systemui" app:isSilent="false"/>
            <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="Battery Color" android:key="asc_color_battery" android:defaultValue="#ffffffff"  />
            <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="Battery Color on white apps" android:key="asc_color_battery_dark" android:defaultValue="#ff222222"  />
            <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="@string/DisplayPercentage" android:key="display_battery_percentage" android:defaultValue="0" android:summaryOn="@string/Shown" android:summaryOff="@string/Hidden" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/BatteryBar" android:summary="@string/DisplayLineontopforbattery">
            <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/battery_bar_entries" android:title="@string/BatteryBar" android:key="battery_bar" android:summary="%s" android:defaultValue="0" android:entryValues="@array/battery_bar_values" />
            <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="@string/Batterybaranimation" android:key="battery_bar_animate" android:defaultValue="true" android:summaryOn="@string/enabled" android:summaryOff="@string/disabled" />
            <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/battery_bar_style_entries" android:title="@string/Batterybarstyle" android:key="battery_bar_style" android:summary="%s" android:defaultValue="1" android:entryValues="@array/battery_bar_style_values" />
            <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/battery_bar_thickness_entries" android:title="@string/Thicknessofbatterybar" android:key="battery_bar_thickness" android:summary="%s" android:defaultValue="2" android:entryValues="@array/battery_bar_thickness_values" />
            <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="@string/BatteryBarColor" android:key="battery_bar_color" android:summary="@string/Choosecolorofbatterybar" android:defaultValue="-1"  />
        </PreferenceCategory>
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/statusbar_icon_color">
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="@string/Separate_or_Global_colors" android:key="asc_is_global_sb_color" android:defaultValue="true" android:summaryOn="@string/Seperatecolors" android:summaryOff="@string/Globalcolors" app:packageNameToKill="com.android.systemui" app:isSilent="false"/>
        <PreferenceCategory android:title="@string/Global_color"/>
        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="@string/Globalcolor" android:key="asc_global_sb_color" android:defaultValue="#ffffff" app:packageNameToKill="com.android.systemui" app:isSilent="false"/>
        <PreferenceCategory android:title="@string/Separate_color"/>
        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="@string/ClockColor" android:defaultValue="#ffffff" android:key="asc_clock_color" android:dependency="asc_is_global_sb_color" app:packageNameToKill="com.android.systemui" app:isSilent="false"/>
        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="@string/StatusIconsColor" android:defaultValue="#ffffff" android:key="asc_status_icons_color" android:dependency="asc_is_global_sb_color" app:packageNameToKill="com.android.systemui" app:isSilent="false"/>
        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="@string/WifiSignalColor" android:defaultValue="#ffffff" android:key="asc_wifi_signal_color" android:dependency="asc_is_global_sb_color" app:packageNameToKill="com.android.systemui" app:isSilent="false"/>
        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="@string/MobileSignalColor" android:defaultValue="#ffffff" android:key="asc_mobile_signal_color" android:dependency="asc_is_global_sb_color" app:packageNameToKill="com.android.systemui" app:isSilent="false"/>
        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="@string/MobileTypeandArrowsColor" android:defaultValue="#ffffff" android:key="asc_mobile_type_color" android:dependency="asc_is_global_sb_color" app:packageNameToKill="com.android.systemui" app:isSilent="false"/>
        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="@string/RoamingIconColor" android:defaultValue="#ffffff" android:key="asc_mobile_roaming_color" android:dependency="asc_is_global_sb_color" app:packageNameToKill="com.android.systemui" app:isSilent="false"/>
        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="@string/AirplanemodeColor" android:defaultValue="#ffffff" android:key="asc_airplane_mode_color" android:dependency="asc_is_global_sb_color" app:packageNameToKill="com.android.systemui" app:isSilent="false"/>
        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="@string/NotificationIconsColor" android:defaultValue="#ffffff" android:key="asc_notification_icons_color" android:dependency="asc_is_global_sb_color" app:rebootDevice="true" app:packageNameToKill="com.android.systemui" app:isSilent="false"/>
        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="@string/BatteryPercentColor" android:defaultValue="#ffffff" android:key="asc_battery_percent_color" android:dependency="asc_is_global_sb_color" app:packageNameToKill="com.android.systemui" app:isSilent="false"/>
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/StatusbarClockOptions">
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="@string/Taponclock" android:key="asc_tap_clock_launcher" android:defaultValue="true" android:summaryOn="@string/Taptolaunchapp" android:summaryOff="@string/TapClockLauncherisdisabled" app:packageNameToKill="com.android.systemui" app:isSilent="false" />
        <com.wubydax.romcontrol.v2.prefs.IntentDialogPreference android:key="asc_press_clock_custom_app" android:title="@string/TapClockAppSelection" android:dependency="asc_tap_clock_launcher" app:intentSeparator="\##" />
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="@string/ShowClockandDate" android:key="asc_status_bar_clock" android:defaultValue="true" android:summaryOn="@string/Clockshown" android:summaryOff="@string/Clockhidden" />
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="@string/UppercaseTextClock" android:key="asc_normal_upper" android:dependency="asc_status_bar_clock" android:defaultValue="false" android:summaryOn="@string/Uppercaseenabled" android:summaryOff="@string/Disabled" />
        <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/clock_format_entries" android:title="@string/ClockFormat" android:key="asc_statusbar_clock_format" android:dependency="asc_status_bar_clock" android:defaultValue="1" android:entryValues="@array/clock_format_values" />
        <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/clock_style_entries" android:title="@string/ClockLocation" android:key="asc_statusbar_clock_style" android:dependency="asc_status_bar_clock" android:defaultValue="0" android:entryValues="@array/clock_style_values" />
        <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/entries_status_bar_am_pm" android:title="@string/ClockAMPM" android:key="asc_statusbar_clock_am_pm_style" android:dependency="asc_status_bar_clock" android:defaultValue="2" android:entryValues="@array/values_status_bar_am_pm" />
        <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/clock_font_style_entries" android:title="@string/ClockFontStyle" android:key="asc_statusbar_clock_font_style" android:dependency="asc_status_bar_clock" android:defaultValue="5" android:entryValues="@array/clock_font_style_values" />
        <com.wubydax.romcontrol.v2.prefs.MySeekBarPreference android:title="@string/ClockScaling" android:key="asc_statusbar_clock_scale" android:summary="@string/Adjustclocksize" android:dependency="asc_status_bar_clock" android:defaultValue="15" app:minValue="5" app:maxValue="25" app:unitsValue="dp" />
        <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/clock_date_display_entries" android:title="@string/DateDisplayType" android:key="asc_statusbar_clock_date_display" android:dependency="asc_status_bar_clock" android:defaultValue="0" android:entryValues="@array/clock_date_display_values" />
        <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/clock_date_style_entries" android:title="@string/DateStyle" android:key="asc_statusbar_clock_date_style" android:dependency="asc_status_bar_clock" android:defaultValue="0" android:entryValues="@array/clock_date_style_values" />
        <com.wubydax.romcontrol.v2.prefs.MyListPreference android:entries="@array/clock_date_format_entries_values" android:title="@string/DateFormat" android:key="asc_statusbar_clock_date_format" android:dependency="asc_status_bar_clock" android:defaultValue="EEE" android:entryValues="@array/clock_date_format_entries_values" />
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/Networktrafficpreferences">
        <PreferenceCategory android:title="@string/SamsungStockTrafficRealTime"/>
            <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="@string/SamsungStockTrafficRealTime" android:key="network_speed"  android:defaultValue="false" android:summaryOn="@string/enabled" android:summaryOff="@string/disabled"  />
        <PreferenceCategory android:title="@string/CustomNetworktraffic"/>
            <com.wubydax.romcontrol.v2.prefs.MyListPreference android:title="@string/Displayedtrafficinfoleft" android:key="asc_network_traffic_state" android:defaultValue="0" app:dependentValue="0" android:entryValues="@array/traffic_state_values" android:entries="@array/traffic_state_items"/>
            <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="@string/DisplaydatainBytes" android:summaryOff="@string/DisplayedinBits" android:summaryOn="@string/DisplayedinBytes" android:defaultValue="false" android:key="asc_network_traffic_unit" />
            <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="@string/Showtrafficarrows" android:key="asc_network_traffic_show_arrows" android:defaultValue="true" android:summaryOff="@string/Arrowshidden" android:summaryOn="@string/Arrowsshown" />
            <com.wubydax.romcontrol.v2.prefs.MyListPreference android:title="@string/Arrowsposition" android:key="asc_network_traffic_arrows_position" android:defaultValue="0" android:entryValues="@array/arrow_position_values" android:entries="@array/arrow_position_entries"/>
            <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="@string/Autohideonlowtraffic" android:key="asc_network_traffic_autohide" android:defaultValue="false" android:summaryOff="@string/Displayedalways" android:summaryOn="@string/Autohideenabled"/>
            <com.wubydax.romcontrol.v2.prefs.MySeekBarPreference android:title="@string/Autohidethreshold" app:unitsValue="Kb" app:maxValue="100" android:key="asc_network_traffic_threshold" android:defaultValue="10" />
            <com.wubydax.romcontrol.v2.prefs.MyListPreference android:title="@string/Fontstyle" android:key="asc_network_traffic_text_style" android:defaultValue="0" android:entries="@array/traffic_style_entries" android:entryValues="@array/traffic_style_entry_values"/>
            <com.wubydax.romcontrol.v2.prefs.MySeekBarPreference android:title="@string/Textsizescalefactor" android:key="asc_network_traffic_scale" app:maxValue="10" android:defaultValue="10"/>
            <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="@string/Separatecolorsforelements" android:key="asc_network_traffic_global_color" android:defaultValue="true" android:summaryOn="@string/Allelementscanbecoloredseparately" android:summaryOff="@string/Globalcolorwillapplytoallelements" app:isSilent="false" app:packageNameToKill="com.android.systemui"/>
            <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="@string/Globalcolor" android:key="asc_network_traffic_color" android:defaultValue="#ffffff" app:isSilent="false" app:packageNameToKill="com.android.systemui"/>
            <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="@string/Uploadtextcolor" android:defaultValue="#ffffff" android:key="asc_network_traffic_upload_color" app:isSilent="false" app:packageNameToKill="com.android.systemui"/>
            <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="@string/Downloadtextcolor" android:defaultValue="#ffffff" android:key="asc_network_traffic_download_color" app:isSilent="false" app:packageNameToKill="com.android.systemui"/>
            <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="@string/Trafficarrowscolor" android:key="asc_network_traffic_arrow_color" android:defaultValue="#ffffff" app:isSilent="false" app:packageNameToKill="com.android.systemui"/>
    </PreferenceScreen>
    <PreferenceScreen android:title="@string/VirtualButtons">
        <PreferenceCategory android:title="@string/LockButton">
            <com.wubydax.romcontrol.v2.prefs.MyCheckBoxPreference android:title="@string/Rightside" android:key="asc_rightcornerlock" android:defaultValue="false" android:summaryOn="@string/On" android:summaryOff="@string/Off" />
            <com.wubydax.romcontrol.v2.prefs.MyCheckBoxPreference android:title="@string/Leftside" android:key="asc_leftcornerlock" android:defaultValue="false" android:summaryOn="@string/On" android:summaryOff="@string/Off" />
            <com.wubydax.romcontrol.v2.prefs.MyCheckBoxPreference android:title="@string/Center" android:key="asc_centerlock" android:defaultValue="false" android:summaryOn="@string/On" android:summaryOff="@string/Off" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/HomeButton">
            <com.wubydax.romcontrol.v2.prefs.MyCheckBoxPreference android:title="@string/Rightside" android:key="asc_rightcornerhome" android:defaultValue="false" android:summaryOn="@string/On" android:summaryOff="@string/Off" />
            <com.wubydax.romcontrol.v2.prefs.MyCheckBoxPreference android:title="@string/Leftside" android:key="asc_leftcornerhome" android:defaultValue="false" android:summaryOn="@string/On" android:summaryOff="@string/Off" />
            <com.wubydax.romcontrol.v2.prefs.MyCheckBoxPreference android:title="@string/Center" android:key="asc_centerhome" android:defaultValue="false" android:summaryOn="@string/On" android:summaryOff="@string/Off" />
        </PreferenceCategory>
        <PreferenceCategory android:title="@string/RecentButton">
            <com.wubydax.romcontrol.v2.prefs.MyCheckBoxPreference android:title="@string/Rightside" android:key="asc_rightcornertask" android:defaultValue="false" android:summaryOn="@string/On" android:summaryOff="@string/Off" />
            <com.wubydax.romcontrol.v2.prefs.MyCheckBoxPreference android:title="@string/Leftside" android:key="asc_leftcornertask" android:defaultValue="false" android:summaryOn="@string/On" android:summaryOff="@string/Off" />
            <com.wubydax.romcontrol.v2.prefs.MyCheckBoxPreference android:title="@string/Center" android:key="asc_centertask" android:defaultValue="false" android:summaryOn="@string/On" android:summaryOff="@string/Off" />
        </PreferenceCategory>
    </PreferenceScreen>
    <com.wubydax.romcontrol.v2.prefs.MyListPreference
        android:entries="@array/SignalPositionName"
        android:title="@string/SignalPosition"
        android:key="asc_left_signal"
        android:defaultValue="0"
        android:entryValues="@array/SignalPositionValue"
        app:isSilent="false"
        app:packageNameToKill="com.android.systemui"/>
</PreferenceScreen>