<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.wubydax.romcontrol.v2.prefs.ImageHeaderPreference app:imageSource="@drawable/android"/>
    <PreferenceCategory android:title="@string/USB"  />
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="@string/USBpluginoutwakeup" android:key="asc_usb_plugged" android:defaultValue="true" android:summaryOn="@string/On" android:summaryOff="@string/Off" />
    <PreferenceCategory android:title="@string/Hardkeysbacklightduration"  />
    <com.wubydax.romcontrol.v2.prefs.MyListPreference android:defaultValue="3000"  android:key="button_key_light" android:entries="@array/button_key_light_entries" android:entryValues="@array/button_key_light_values" android:summary="%s" android:title="@string/Settimeofduration"/>
    <PreferenceCategory android:title="@string/Headsups"  />
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="@string/HeadsUpNotifications" android:key="heads_up_notifications_enabled" android:defaultValue="true" android:summaryOn="@string/enabled" android:summaryOff="@string/disabled" app:packageNameToKill="com.android.systemui" app:isSilent="false"/>
</PreferenceScreen>