<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.wubydax.romcontrol.v2.prefs.ImageHeaderPreference app:imageSource="@drawable/android"/>
    <PreferenceCategory android:title="@string/MatrixAnimationsFeatures" android:summary="@string/MatrixOptions" >
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="@string/MatrixRecentsAnimation" android:key="asc_matrix_anim" android:summaryOn="@string/enabled" android:summaryOff="@string/disabled"  />
        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="@string/MatrixTextColorized" android:dependency="asc_matrix_anim" android:summary="@string/ChooseMatrixTextcolor" android:key="recents_matrix_anim_text_color" android:defaultValue="#1eff00" app:packageNameToKill="com.android.systemui" app:isSilent="false"/>
        <com.wubydax.romcontrol.v2.prefs.ColorPickerPreference android:title="@string/MatrixBGColor" android:dependency="asc_matrix_anim" android:summary="@string/ChooseMatrixBGcolor" android:key="recents_matrix_anim_bg_color" android:defaultValue="#ff000000" app:packageNameToKill="com.android.systemui" app:isSilent="false"/>
        <com.wubydax.romcontrol.v2.prefs.MySeekBarPreference app:maxValue="100" android:title="@string/MatrixTextTransparency" android:dependency="asc_matrix_anim" android:key="recents_matrix_anim_text_alpha" android:defaultValue="100" app:minValue="50" app:unitsValue="" app:packageNameToKill="com.android.systemui" app:isSilent="false"/>
        <com.wubydax.romcontrol.v2.prefs.MySeekBarPreference app:maxValue="100" android:title="@string/MatrixTextFontSize" android:dependency="asc_matrix_anim" android:key="recents_matrix_anim_font_size" android:defaultValue="46" app:minValue="20" app:unitsValue="" app:packageNameToKill="com.android.systemui" app:isSilent="false"/>
        <com.wubydax.romcontrol.v2.prefs.MySeekBarPreference app:maxValue="100" android:title="@string/MatrixFrequency" android:dependency="asc_matrix_anim" android:key="recents_matrix_anim_frequency" android:defaultValue="16" app:minValue="1" app:unitsValue="" app:packageNameToKill="com.android.systemui" app:isSilent="false"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="Quicklaunch"  >
        <com.wubydax.romcontrol.v2.prefs.MySwitchPreference android:title="@string/QuicklaunchinRecents" android:key="quick_launch_visible" android:summaryOn="@string/Shown" android:summaryOff="@string/Hidden"  app:packageNameToKill="com.android.systemui" app:isSilent="false"/>
    </PreferenceCategory>
</PreferenceScreen>